tests/snapshots/markdown__preserves_hyphenated_words.snap
---
source: tests/markdown.rs
assertion_line: 96
expression: result
---
## New Features
- e2e946a0ecd5da56e2e946a0ecd5da56e2e946a0 feat: the ill-fated star-crossed lovers

  In fair Verona, where we lay our scene, the never-ending blood-feud between
  two well-respected households breaks into new mutiny. The star-crossed lovers,
  fortune-favoured in their passion yet ill-fated in their destiny, take their
  life. Their death-marked love and parents' rage could naught but with their
  children's end bury their strife.

*Generated with [release-note](https://github.com/purpleclay/release-note)*
