tests/snapshots/markdown__preserves_indented_code_blocks.snap
---
source: tests/markdown.rs
expression: result
---
## HEAD - November 27, 2025

[**`1`**](#new-features) new feature

## New Features
- **`c127018`** add indented example

      HAMLET: To be, or not to be, that is the question.
      OPHELIA: Good my lord, how does your honour for this many a day?

*Generated with [release-note](https://github.com/purpleclay/release-note)*
