tests/snapshots/markdown__preserves_inline_code_without_wrapping.snap
---
source: tests/markdown.rs
assertion_line: 214
expression: result
---
## New Features
- 82155fff37617dcd82155fff37617dcd82155fff feat: preserve formatting in dramatic text

  When Hamlet ponders mortality, he invokes `toBeOrNotToBeThatIsTheQuestion`
  near the line boundary. Similarly, the method
  `whetherTisNoblerInTheMindToSufferTheSlingsAndArrows` tests wrapping. Call
  `theSeaOfTroubles` for reference.

*Generated with [release-note](https://github.com/purpleclay/release-note)*
