tests/snapshots/markdown__renders_breaking_description_as_important_alert.snap
---
source: tests/markdown.rs
expression: result
---
## HEAD - November 27, 2025

[**`2`**](#breaking-changes) breaking changes

## Breaking Changes
- **`4cfa67f`** the course of true love never did run smooth

  Lord, what fools these mortals be!

> [!IMPORTANT]
> Migrate the config file to the new format.
> 
> ```
> old = 1
> new = 2
> ```
- **`fa1ad19`** parting is such sweet sorrow

*Generated with [release-note](https://github.com/purpleclay/release-note)*
